add unit tests for components; add public/void for ngOnInit method; create service for courses

--- a/angular.json
+++ b/angular.json
@@ -100,6 +100,11 @@
             "styles": [
               "src/styles/global.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            },
             "scripts": []
           }
         },
